# Supervertaler

./: .editorconfig  .gitattributes  .gitbook.yaml  .gitignore  .gitmodules  AGENTS.md  AI_PROMPT_ASSISTANT.md  BACKUP_prompt_library_tab_OLD.txt  BILINGUAL_IMPORT_FEATURE_v2.4.1.md  BUGFIX_AI_ASSISTANT_PROMPT_GENERATOR.md  BUGFIX_JSON_SCHEMA_AND_TAB_INIT.md  BUGFIX_model_selection_and_formatting_tags.md  BUILD_EXE.md  BUILD_MACOS.md  BUILD_REQUIREMENTS.md  CAT_TOOL_IMPLEMENTATION_PLAN.md  CHANGELOG-CAT.md  CHANGELOG-CLASSIC.md  CHANGELOG.md  CHANGELOG_Qt.md  CLAUDE.md  CLAUDE_SESSION_HANDOFF.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY_2025-10-06.md  CODE_OF_CONDUCT.md  COLOR_FIX_EXPLANATION.md  COMPLETE_SESSION_SUMMARY_2025-10-03.md  CONTRIBUTING.md  DASHBOARD_LAYOUT_v2.5.0.md  DISTRIBUTION_GUIDE.md  DUAL_SELECTION_SYSTEM.md  FAQ.md  FULL_INTEGRATION_PLAN.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_INSTRUCTIONS.md  GITHUB_RELEASE_INSTRUCTIONS_v3.7.1.md  GITHUB_RELEASE_v3.7.1.md  GitHub_Discussion_106_Response.md  GitHub_Issue_105_Response.md  INSTALLATION.md  (+186 more)
.claude/: settings.json  settings.local.json
.dev/: CHANGELOG_backup.md  CRITICAL_GITIGNORE_ENTRIES.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PRIVATE_FEATURES_IMPLEMENTATION.md  README.md  SAFE_DELETION_SYSTEM_SUMMARY.md  SECURITY_INCIDENT_CLEANUP.md  SECURITY_INCIDENT_FINAL_REPORT.md  SECURITY_INCIDENT_ROOT_CAUSE.md  TESTING_CHECKLIST.md  ai_ocr_tool.py  checkbox_style_preview.html  cleanup_desktop_ini.ps1  jpg_to_docx_converter.py  migrate_to_parallel_structure.ps1
.github/: FUNDING.yml
.venv-build/: pyvenv.cfg
Previous versions/: Supervertaler_v2.5.1 (experimental - CAT editor development)(2025-10-09).py
assets/: ICON_CONVERSION_GUIDE.md  README.md  README_ICONS.md  generate_icons.py  icon_preview.html
cat_tool_prototype/: BILINGUAL_test_translated.docx  BUGFIX_COLUMN_MISALIGNMENT.md  BUGFIX_MISSING_SUBTITLE.md  BUGFIX_TABLE_DUPLICATION.md  BUGFIX_v0.1.1.md  CHANGELOG.md  CHANGELOG_SEPARATION_SUMMARY.md  COMPACT_VIEW_v0.4.0.md  README.md  (+57 more)
(+1161 files in other folders)
